# SyntheticBank

./: README.md  app.py  fancy.py  fancy_bank.py  fancy_generator.py  final_bank_generator.ipynb  final_chase_generator.ipynb  gen_statement.ipynb  generate_bank_statements.ipynb  hello.py  main.py  multi_bank.ipynb  new_app.py  new_generator.py  packages.txt  pyproject.toml  requirements.txt  restructured_generator.ipynb  statement_generator.py  test copy.html  test.html  testcopy.ipynb
.streamlit/: config.toml
app/: main.py  packages.txt  requirements.txt  statement_generator.py
new_statements/: bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_chase.csv  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_chase_chase_classic_style.html  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_chase_chase_variation_1.html  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_chase_chase_variation_2.html  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_citibank.csv  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_citibank_citibank_classic_template.html  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_citibank_citibank_variation_1.html  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_citibank_citibank_variation_2.html  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_pnc.csv  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_pnc_pnc_classic.html  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_wellsfargo.csv  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_wellsfargo_wells_fargo_classic.html  bank_statement_BUSINESS_LARSON,_MCCOY_AND_MOSES_wellsfargo_wells_variation_1.html  bank_statement_BUSINESS_STOUT-BRADFORD_chase.csv  (+46 more)
(+215 files in other folders)
