[project]
name = "synthdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.3.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "notebook>=7.4.3",
    "numpy>=2.2.6",
    "ollama>=0.5.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pdfkit>=1.0.0",
    "pydantic>=2.11.5",
    "streamlit-pdf-viewer>=0.0.26",
    "streamlit>=1.45.1",
]
